fix(ui): increase tabs and header z-index, flashcard query dropdown z-index decrease

--- a/src/modules/content/content.css
+++ b/src/modules/content/content.css
@@ -17,3 +17,7 @@
     position: relative;
     top:4px;
 }
+
+.cards-review .ui__dropdown-trigger {
+    z-index: 11 !important;
+}
